fixing spacing

--- a/Home.css
+++ b/Home.css
@@ -3,12 +3,12 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1014px;
+  min-height: 700px;
 }
 
 .u-section-1 .u-group-1 {
   width: 707px;
-  min-height: 806px;
+  min-height: 700px;
   margin: 94px 0 0 auto;
 }
 
